# test-management-sync

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: development.yml  release-candidate.yml  release.yml
test_management_sync/: __init__.py  manager.py  model.py  service.py  util.py
test_management_sync/zephyr/: __init__.py  service.py  session.py
test_management_sync/zephyr/actions/: __init__.py  attachments.py  planning.py  preferences.py  requirement.py  requirement_tree.py  search.py  testcase.py  testcase_tree.py  user.py
test_management_sync/zephyr/model/: attachments.py  field_util.py  planning.py  preferences.py  requirements.py  search.py  testcases.py  user.py
tests/: test_manager.py
