[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"
authors = [
  { name = "developer", email = "developer@exactpro.com" },
]

[tool.poetry]
name = "test-management-sync"
version = "0.0.2"
description = "API to syncronize test result with test-management tool"
authors = ["developer <developer@exactpro.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "*"
dataclasses-json = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"